Bug 1179181 - Store separate volume setting into setting database. r=baku